--- a/worksbynrfz/eicw/eicw-interactive-2.html
+++ b/worksbynrfz/eicw/eicw-interactive-2.html
@@ -71,13 +71,96 @@
     </div>
   </header>
 
+  <section class="wbnrfz-summ-micro clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container container-xxl">
+
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+          <strong>Hello!</strong> This Microsite is actively being developed! Some features may not work as intended.
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+        <div class="col-lg-12">
+          <div class="main-title">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="../../index.html"> Home</a>
+                </li>
+                <li class="breadcrumb-item"><a href="../../works-by-nrfz.html"> Works By NRFZ</a>
+                </li>
+              </ol>
+            </nav>
+            <h1>Experimenting Improvements of Current Wayfinding</h1>
+          </div>
+        </div>
+
+        <div class="details_catagory_wrap">
+          <div class="col-sm-4 single_catagory ">
+            <span>Category</span>
+            <h4>Concepts & Replications</h4>
+          </div>
+          <div class="col-sm-2 single_catagory">
+            <span>Project Year</span>
+            <h4>2024 - 2025</h4>
+          </div>
+          <div class="col-sm-2 single_catagory">
+            <span>Share Project</span>
+            <div class="social_links">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/eicw/eicw-interactive.html"
+                title="Facebook">
+                <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/eicw/eicw-interactive.html&text= Experimenting Improvements of Current Wayfinding"
+                title="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                  class="fa-solid fa-link"></i>
+                <p class="clipboard-copied" style="font-size: 12px;"></p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
+    style="background-image: url(../../img/eicw/cover-light.png)">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+      </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
+      <div class="container container-xxl">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="info justify-content-center">
+
+              <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: left;">Time to get more
+                Experimental!</h2>
+              <p style="text-align: left;">This is a continuation from the <a href="eicw-interactive.html">First
+                  Page</a> which focuses on
+                enhancements and iterations to the existing New Wayfinding system. This page aims to take
+                a more experimental approach by exploring more Implementation ideas and how the new systems can be
+                enhanced further.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="iu-img"
     style="background-image: url(../../img/eicw/iu-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Incremental Updates - Labels</h2>
+            <h2 class="page-title">Incremental Updates from last Proposed Version</h2>
           </div>
         </div>
       </div>
@@ -87,131 +170,52 @@
   <section class="about-me-summ section-padding-80-0 clearfix">
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container container-xxl">
-        <div class="row justify-content-center">
+        <div class="details_info">
+          <div class="row justify-content-center">
+            <div class="col-lg-12">
+              <div class="info justify-content-center">
 
-          <div class="col-lg-12">
-            <div class="details_info">
-              <div class="row justify-content-center">
-                <div class="col-lg-12">
-                  <div class="info justify-content-center">
-
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Way Out Icon</h2>
-                    <p style="text-align: left;">The proposed new Way Out icon combines two elements: the Emergency Exit
-                      Icon and the Exit Icon.
-
-                      Commuters will be able to distinguish the Exit icon more easily with the use of the Exit colour,
-                      as well as the 'Exit Border' symbol, which is currently being used to signify exits.
-                    </p>
-                  </div>
-
-                  <div class="column column-pic">
-                    <figcaption>
-                      <a href="../../img/eicw/wo1-light.png" id="wo1" class="portfolio-img ">
-                        <img src="../../img/eicw/wo1-light.png" id="wo1-img" class="img-fluid cp-img" alt="wo1">
-                      </a>
-                    </figcaption>
-                  </div>
-
-                  <div class="column column-pic">
-                    <figcaption>
-                      <a href="../../img/eicw/wo2-light.png" id="wo2" class="portfolio-img">
-                        <img src="../../img/eicw/wo2-light.png" id="wo2-img" class="img-fluid cp-img" alt="wo2">
-                      </a>
-                    </figcaption>
-                  </div>
-
-                  <video id="eicw-vid1" autoplay muted loop playsinline width="100%" class="column-vid">
-                    <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-
-                </div>
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Labels</h2>
+                <p style="text-align: left;">From feedbacks on the ground, many commuters didn't understand what "A with
+                  a Dash below" the "Gate"
+                  meant. Those descriptions actually refers to the Platforms and Exits respectively. To make it clearer,
+                  an 'Exit'/'Platform' label has been added, and it is now mandatory to be added. Current
+                  implementations
+                  saw the labels at the top for Exits as temporary (stickered on at a later part, and not integrated
+                  into the
+                  design.)
+                </p>
               </div>
+
+              <div class="column column-pic">
+                <figcaption>
+                  <a href="../../img/eicw/wo1-light.png" id="wo1" class="portfolio-img ">
+                    <img src="../../img/eicw/wo1-light.png" id="wo1-img" class="img-fluid cp-img" alt="wo1">
+                  </a>
+                </figcaption>
+              </div>
+
+              <div class="column column-pic">
+                <figcaption>
+                  <a href="../../img/eicw/wo2-light.png" id="wo2" class="portfolio-img">
+                    <img src="../../img/eicw/wo2-light.png" id="wo2-img" class="img-fluid cp-img" alt="wo2">
+                  </a>
+                </figcaption>
+              </div>
+
+              <video id="eicw-vid1" autoplay muted loop playsinline width="100%" class="column-vid">
+                <source src="../../img/eicw/eicw-vid1-light.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+
             </div>
           </div>
-
-          <hr>
-
-          <!-- <div class="col-lg-12">
-            <div class="details_info">
-              <div class="row justify-content-center">
-                <div class="col-lg-12">
-                  <div class="info justify-content-center">
-
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Exit Icon</h2>
-                    <p style="text-align: left;">The proposed new Exit icon standardises the use of the 'Exit Border'
-                      symbol for those using both numbers or alphabets. Currently, the Exit icons for numbers and
-                      alphabets are labelled differently. 
-                    </p>
-                  </div>
-
-                  <div class="column column-pic">
-                    <figcaption>
-                      <a href="../../img/eicw/exit-light.png" id="exit" class="portfolio-img ">
-                        <img src="../../img/eicw/exit-light.png" id="exit-img" class="img-fluid cp-img" alt="exit">
-                      </a>
-                    </figcaption>
-                  </div>
-
-                  <video id="eicw-vid2" autoplay muted loop playsinline width="100%" class="column-vid">
-                    <source src="../../img/eicw/eicw-vid2-light.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-
-                </div>
-              </div>
-            </div>
-          </div> -->
-
-          <hr>
-
-          <!-- <div class="col-lg-12">
-            <div class="details_info">
-              <div class="row justify-content-center">
-                <div class="col-lg-12">
-                  <div class="info justify-content-center">
-
-                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Lift Icons</h2>
-                    <p style="text-align: left;">The Lift Icon received a minor change. To maximise space, the Up and
-                      Down arrows have been placed in the icon, and the inclusion of only one person in the lift icon. 
-                      <br>
-                      This is because the wheelchair symbol has been included together with the 'Priority Use' signage,
-                      hence, it is redundant to include the wheelchair icon.
-                      <br><br>
-                      The use of Blue Signages to signify lifts has also been expanded. This is to ensure that the lift
-                      signs
-                      are easily distinguishable from the rest of the signage variants. <br> (i.e Blue Signages =
-                      Lift)
-                    </p>
-                  </div>
-
-                  <div class="column column-pic">
-                    <figcaption>
-                      <a href="../../img/eicw/lift-light1.png" id="lift1" class="portfolio-img ">
-                        <img src="../../img/eicw/lift-light1.png" id="lift1-img" class="img-fluid cp-img" alt="lift1">
-                      </a>
-                    </figcaption>
-                  </div>
-
-                  <div class="column column-pic">
-                    <figcaption>
-                      <a href="../../img/eicw/lift-light2.png" id="lift2" class="portfolio-img ">
-                        <img src="../../img/eicw/lift-light2.png" id="lift2-img" class="img-fluid cp-img" alt="lift2">
-                      </a>
-                    </figcaption>
-                  </div>
-
-                  <video id="eicw-vid3" autoplay muted loop playsinline width="100%" class="column-vid">
-                    <source src="../../img/eicw/eicw-vid3-light.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-
-                </div>
-              </div>
-            </div>
-          </div> -->
-
         </div>
+
+
+        <hr>
+
+
       </div>
       <div class="row mt-5">
         <div class="col-pg text-center">
@@ -302,8 +306,11 @@
     });
 
     function updateHrefForDarkMode() {
+      /* Banners */
+      const coverSect = document.getElementById('cv-img');
       const iuSect = document.getElementById('iu-img');
 
+      /* Images */
       // const tf_link = document.getElementById('tf');
       // const tf_img = document.getElementById('tf-img');
 
@@ -325,6 +332,7 @@
       // const lift2_link = document.getElementById('lift2');
       // const lift2_img = document.getElementById('lift2-img');
 
+      /* Videos */
       // const vid1 = document.getElementById('eicw-vid1');
       // const vid1Source = vid1.querySelector('source');
 
@@ -337,8 +345,11 @@
       const isDarkMode = document.body.classList.contains('dark-mode');
 
       if (isDarkMode) {
+        /* Banners */
+        coverSect.style.backgroundImage = "url('../../img/eicw/cover-dark.png')";
         iuSect.style.backgroundImage = "url('../../img/eicw/iu-dark.png')";
 
+        /* Images */
         // tf_link.href = '../../img/eicw/typeface-dark.png';
         // tf_img.src = '../../img/eicw/typeface-dark.png';
 
@@ -360,13 +371,17 @@
         // lift2_link.href = '../../img/eicw/lift-dark2.png';
         // lift2_img.src = '../../img/eicw/lift-dark2.png';
 
+        /* Videos */
         // vid1Source.src = '../../img/eicw/eicw-vid1-dark.mp4';
         // vid2Source.src = '../../img/eicw/eicw-vid2-dark.mp4';
         // vid3Source.src = '../../img/eicw/eicw-vid3-dark.mp4';
 
       } else {
+        /* Banners */
+        coverSect.style.backgroundImage = "url('../../img/eicw/cover-light.png')";
         iuSect.style.backgroundImage = "url('../../img/eicw/iu-light.png')";
 
+        /* Images */
         // tf_link.href = '../../img/eicw/typeface-light.png';
         // tf_img.src = '../../img/eicw/typeface-light.png';
 
@@ -388,6 +403,7 @@
         // lift2_link.href = '../../img/eicw/lift-light2.png';
         // lift2_img.src = '../../img/eicw/lift-light2.png';
 
+        /* Videos */
         // vid1Source.src = '../../img/eicw/eicw-vid1-light.mp4';
         // vid2Source.src = '../../img/eicw/eicw-vid2-light.mp4';
         // vid3Source.src = '../../img/eicw/eicw-vid3-light.mp4';
