--- a/worksbynrfz/eicw/eicw-interactive.html
+++ b/worksbynrfz/eicw/eicw-interactive.html
@@ -469,18 +469,10 @@
                     </div>
                   </div>
 
-                  <!-- <video id="eicw-vid5" autoplay muted loop playsinline width="100%" class="column-vid">
-                    <source src="../../img/eicw/eicw-vid5-light.mp4" type="video/mp4">
+                  <video id="eicw-vid7" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <source src="../../img/eicw/eicw-vid7-light.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
-
-                  <video id="eicw-vid6" autoplay muted loop playsinline width="100%" class="column-vid">
-                    <source src="../../img/eicw/eicw-vid6-light.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video> -->
-
-
-
                 </div>
               </div>
             </div>
@@ -488,44 +480,190 @@
           </div>
 
 
+          <!-- Station Exit Sign -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="details_info">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <div class="info justify-content-center">
 
+                    <h2 class="mb-3" style="font-size: 30px; font-weight:bold ;">Station Exit Sign</h2>
+                    <p style="text-align: left;">Currently, there are three variants to the Station Exit signs. The
+                      current version has the Exit Number and icons with a
+                      grey base, another, with the Exit Name and Exit Letter Icon. The latest ones, only available at
+                      Punggol Coast, have a coloured Exit sign with
+                      only the Exit Number
+                      present. The new design combines all three elements, alongside the addition of street names on the
+                      Exit
+                      sign.
+                    </p>
+                  </div>
 
+                  <div class="row">
+                    <div class="column column-pic">
+                      <figcaption>
+                        <a href="../../img/eicw/se-light.png" id="se" class="portfolio-img ">
+                          <img src="../../img/eicw/se-light.png" id="se-img" class="img-fluid cp-img" alt="se">
+                        </a>
+                      </figcaption>
+                    </div>
+                  </div>
 
-        </div>
-
-
-      </div>
-
-      <div class="row mt-5">
-        <div class="col-pg text-center">
-          <div class="block-27">
-            <ul>
-              <li class="active"><span>1</span></li>
-              <li><a href="eicw-interactive-2.html">2</a></li>
-              <!-- <li><a href="#">3</a></li>-->
-              <li><a href="eicw-interactive-2.html">&gt;</a></li>
-            </ul>
+                  <video id="eicw-vid8" autoplay muted loop playsinline width="100%" class="column-vid">
+                    <source src="../../img/eicw/eicw-vid8-light.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
+              </div>
+            </div>
+            <hr>
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="eia-img"
+    style="background-image: url(../../img/eicw/eia-light.png)">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
+          <div class="breadcrumb-content text-center">
+            <h2 class="page-title">Existing Icon Assets</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="wbnrfz_details">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Exit Signs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">Exit
+                  Signs</h2>
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/U-C.png" id="tf" class="portfolio-img">
+                    <img src="../../img/eicw/U-C.png" id="tf-img" class="img-fluid" alt="tf">
+                  </a>
+                </div>
+                <hr>
+              </div>
+
+              <!-- Line/Station/Network Caplets -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Line/Station/Network Caplets</h2>
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/U-C.png" id="pl" class="portfolio-img">
+                    <img src="../../img/eicw/U-C.png" id="pl-img" class="img-fluid" alt="pl">
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
 
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="eia-img"
+    style="background-image: url(../../img/eicw/eia-light.png)">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
+          <div class="breadcrumb-content text-center">
+            <h2 class="page-title">Design Standards Brainstorm</h2>
+          </div>
+        </div>
+      </div>
+  </section>
 
-  <!-- Author -->
-  <!-- <div class="about-author d-flex p-4">
-            <div class="bio mr-0 text-center">
-              <img src="../../img/bg-img/about.png" alt="profile" class="img-blog-profile img-fluid mb-4">
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="wbnrfz_details">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Exit Signs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">Lift
+                  Signages</h2>
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/U-C.png" id="tf" class="portfolio-img">
+                    <img src="../../img/eicw/U-C.png" id="tf-img" class="img-fluid" alt="tf">
+                  </a>
+                </div>
+                <hr>
+              </div>
+
+              <!-- Line/Station/Network Caplets -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <h2 class="mb-3" style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  Exit Directories</h2>
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/U-C.png" id="pl" class="portfolio-img">
+                    <img src="../../img/eicw/U-C.png" id="pl-img" class="img-fluid" alt="pl">
+                  </a>
+                </div>
+              </div>
+
             </div>
-            <div class="desc">
-              <h3 style="font-size: 30px; font-weight: bold;">Nurafian Zulkifli</h3>
-              <p>Passionate about Technology and Designs - mainly UI Designs, Wayfinding and
-                Signage Designs.<br><br> I also
-                enjoy replicating stuffs that interests me.</p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="wbnrfz_details">
+      <div class="container container-xxl">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Exit Signs -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                <div class="banner-eicw">
+                  <a href="../../img/eicw/evo-light.png" id="evo" class="portfolio-img">
+                    <img src="../../img/eicw/evo-light.png" id="evo-img" class="img-fluid" alt="evo">
+                  </a>
+                </div>
+              </div>
             </div>
-          </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="row mt-5">
+      <div class="col-pg text-center">
+        <div class="block-27">
+          <ul>
+            <li class="active"><span>1</span></li>
+            <li><a href="eicw-interactive-2.html">2</a></li>
+            <!-- <li><a href="#">3</a></li> -->
+            <li><a href="eicw-interactive-2.html">&gt;</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer class="footer-area">
     <div class="container container-xxl">
@@ -558,191 +696,7 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-
-
-
-  <!-- Dark Mode Functionality for Individual Pages -->
-  <script>
-    // Check localStorage for dark mode preference
-    if (localStorage.getItem('dark-mode') === 'enabled') {
-      document.body.classList.add('dark-mode');
-      updateHrefForDarkMode();
-    }
-
-    const toggleButton = document.getElementById('dark-mode-toggle');
-    toggleButton.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-      // Save the preference in localStorage
-      if (document.body.classList.contains('dark-mode')) {
-        localStorage.setItem('dark-mode', 'enabled');
-      } else {
-        localStorage.setItem('dark-mode', 'disabled');
-      }
-      updateHrefForDarkMode();
-    });
-
-    function updateHrefForDarkMode() {
-      /* Banners */
-      const coverSect = document.getElementById('cv-img');
-      const ciSect = document.getElementById('ci-img');
-
-      /* Images */
-      const tf_link = document.getElementById('tf');
-      const tf_img = document.getElementById('tf-img');
-
-      const pl_link = document.getElementById('pl');
-      const pl_img = document.getElementById('pl-img');
-
-      const pl2_link = document.getElementById('pl2');
-      const pl2_img = document.getElementById('pl2-img');
-
-      const wo1_link = document.getElementById('wo1');
-      const wo1_img = document.getElementById('wo1-img');
-
-      const wo2_link = document.getElementById('wo2');
-      const wo2_img = document.getElementById('wo2-img');
-
-      const exit_link = document.getElementById('exit');
-      const exit_img = document.getElementById('exit-img');
-
-      const lift1_link = document.getElementById('lift1');
-      const lift1_img = document.getElementById('lift1-img');
-
-      const lift2_link = document.getElementById('lift2');
-      const lift2_img = document.getElementById('lift2-img');
-
-      const liftd_link = document.getElementById('liftd');
-      const liftd_img = document.getElementById('liftd-img');
-
-      const ed1_link = document.getElementById('ed1');
-      const ed1_img = document.getElementById('ed1-img');
-
-      const sn_link = document.getElementById('sn');
-      const sn_img = document.getElementById('sn-img');
-
-      /* Videos */
-      const vid1 = document.getElementById('eicw-vid1');
-      const vid1Source = vid1.querySelector('source');
-
-      const vid2 = document.getElementById('eicw-vid2');
-      const vid2Source = vid2.querySelector('source');
-
-      const vid3 = document.getElementById('eicw-vid3');
-      const vid3Source = vid3.querySelector('source');
-
-      const vid4 = document.getElementById('eicw-vid4');
-      const vid4Source = vid4.querySelector('source');
-
-      const vid5 = document.getElementById('eicw-vid5');
-      const vid5Source = vid5.querySelector('source');
-
-      const vid6 = document.getElementById('eicw-vid6');
-      const vid6Source = vid6.querySelector('source');
-
-      const isDarkMode = document.body.classList.contains('dark-mode');
-
-      if (isDarkMode) {
-        /* Banners */
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-dark.png')";
-        ciSect.style.backgroundImage = "url('../../img/eicw/c-i-dark.png')";
-
-        /* Images */
-        tf_link.href = '../../img/eicw/typeface-dark.png';
-        tf_img.src = '../../img/eicw/typeface-dark.png';
-
-        pl_link.href = '../../img/eicw/palettes-dark.png';
-        pl_img.src = '../../img/eicw/palettes-dark.png';
-
-        pl2_link.href = '../../img/eicw/palettes-dark2.png';
-        pl2_img.src = '../../img/eicw/palettes-dark2.png';
-
-        wo1_link.href = '../../img/eicw/wo1-dark.png';
-        wo1_img.src = '../../img/eicw/wo1-dark.png';
-
-        wo2_link.href = '../../img/eicw/wo2-dark.png';
-        wo2_img.src = '../../img/eicw/wo2-dark.png';
-
-        exit_link.href = '../../img/eicw/exit-dark.png';
-        exit_img.src = '../../img/eicw/exit-dark.png';
-
-        lift1_link.href = '../../img/eicw/lift-dark1.png';
-        lift1_img.src = '../../img/eicw/lift-dark1.png';
-
-        lift2_link.href = '../../img/eicw/lift-dark2.png';
-        lift2_img.src = '../../img/eicw/lift-dark2.png';
-
-        liftd_link.href = '../../img/eicw/liftd-dark.png';
-        liftd_img.src = '../../img/eicw/liftd-dark.png';
-
-        ed1_link.href = '../../img/eicw/ed1-dark.png';
-        ed1_img.src = '../../img/eicw/ed1-dark.png';
-
-        sn_link.href = '../../img/eicw/sn-dark.png';
-        sn_img.src = '../../img/eicw/sn-dark.png';
-
-        /* Videos */
-        vid1Source.src = '../../img/eicw/eicw-vid1-dark.mp4';
-        vid2Source.src = '../../img/eicw/eicw-vid2-dark.mp4';
-        vid3Source.src = '../../img/eicw/eicw-vid3-dark.mp4';
-        vid4Source.src = '../../img/eicw/eicw-vid4-dark.mp4';
-        vid5Source.src = '../../img/eicw/eicw-vid5-dark.mp4';
-        vid6Source.src = '../../img/eicw/eicw-vid6-dark.mp4';
-
-      } else {
-        /* Banners */
-        coverSect.style.backgroundImage = "url('../../img/eicw/cover-light.png')";
-        ciSect.style.backgroundImage = "url('../../img/eicw/c-i-light.png')";
-
-        /* Images */
-        tf_link.href = '../../img/eicw/typeface-light.png';
-        tf_img.src = '../../img/eicw/typeface-light.png';
-
-        pl_link.href = '../../img/eicw/palettes-light.png';
-        pl_img.src = '../../img/eicw/palettes-light.png';
-
-        pl2_link.href = '../../img/eicw/palettes-light2.png';
-        pl2_img.src = '../../img/eicw/palettes-light2.png';
-
-        wo1_link.href = '../../img/eicw/wo1-light.png';
-        wo1_img.src = '../../img/eicw/wo1-light.png';
-
-        wo2_link.href = '../../img/eicw/wo2-light.png';
-        wo2_img.src = '../../img/eicw/wo2-light.png';
-
-        exit_link.href = '../../img/eicw/exit-light.png';
-        exit_img.src = '../../img/eicw/exit-light.png';
-
-        lift1_link.href = '../../img/eicw/lift-light1.png';
-        lift1_img.src = '../../img/eicw/lift-light1.png';
-
-        lift2_link.href = '../../img/eicw/lift-light2.png';
-        lift2_img.src = '../../img/eicw/lift-light2.png';
-
-        liftd_link.href = '../../img/eicw/liftd-light.png';
-        liftd_img.src = '../../img/eicw/liftd-light.png';
-
-        ed1_link.href = '../../img/eicw/ed1-light.png';
-        ed1_img.src = '../../img/eicw/ed1-light.png';
-
-        sn_link.href = '../../img/eicw/sn-light.png';
-        sn_img.src = '../../img/eicw/sn-light.png';
-
-        /* Videos */
-        vid1Source.src = '../../img/eicw/eicw-vid1-light.mp4';
-        vid2Source.src = '../../img/eicw/eicw-vid2-light.mp4';
-        vid3Source.src = '../../img/eicw/eicw-vid3-light.mp4';
-        vid4Source.src = '../../img/eicw/eicw-vid4-light.mp4';
-        vid5Source.src = '../../img/eicw/eicw-vid5-light.mp4';
-        vid6Source.src = '../../img/eicw/eicw-vid6-light.mp4';
-      }
-      vid1.load();
-      vid2.load();
-      vid3.load();
-      vid4.load();
-      vid5.load();
-      vid6.load();
-    }
-  </script>
+  <script src="js/eicw-1.js"></script>
 
   <script src="../../js/jquery.min.js"></script>
 
